--- a/ECardMan/ECardMan-Info.plist
+++ b/ECardMan/ECardMan-Info.plist
@@ -35,5 +35,9 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>UIAppFonts</key>
+	<array>
+		<string>KYLE-H.TTF</string>
+	</array>
 </dict>
 </plist>
